fix(app/event/styles): update spacings for big-titles and titles

--- a/index.css
+++ b/index.css
@@ -547,6 +547,9 @@ nav {
 	.motivation-counter-count {
 		width: calc(100% / 3);
 	}
+	.jornada {
+		padding: 3.5em 0 4.5em 0;
+	}
 	
 }
 @media (min-width: 768px) {
